--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ body {
 	height: 1em;
 	flex-basis: 1.4em;
 }
+
 .language-level {
 	border-color:pink !important;
 }
@@ -56,3 +57,10 @@ body {
 .language-progress{
 	background-color: pink !important;
 }
+
+.my font {
+	font-family: "Madimi One", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+  }
+  
