--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 
     h2{
         font-family: Lato, Helvetica, Arial, sans-serif;
-        color: #ea5200;
+        color: rgb(5, 18, 64);
        
 
     }
@@ -28,7 +28,7 @@ body {
 }
 
 .resume-main {
-	background-color: #f8afce;
+	background-color: peachpuff
 }
 
 .resume-aside {
